# S9Lab-Launcher

./: .gitignore  BUILD-INSTALLER.ps1  BUILD-SIGNED-RELEASE.ps1  BUILD-WINDOWS.ps1  CONFIGURE-CLIENT-UPDATER.ps1  CONFIGURE-SOURCES.ps1  DISABLE-LAUNCHER-UPDATER.ps1  ENABLE-LAUNCHER-UPDATER.ps1  GENERATE-UPDATER-KEY.ps1  LICENSE  PREPARE-CLIENT-UPDATE.ps1  README.md  START-DEV.ps1  UPDATE-CLIENT-JAR.ps1  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-launcher.yml
.s9lab-patch-backup-20260617-002059/src/: types.ts
src/: App.tsx  enhancements.css  launcher-theme.css  main.tsx  styles.css  types.ts  updater-config.ts
src-tauri/: Cargo.toml  backend-integration.json  client-update.json  discord-rpc.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  discord_rpc.rs  error.rs  lib.rs  logging.rs  main.rs  rewards.rs
src-tauri/src/app/: config.rs  mod.rs  paths.rs
src-tauri/src/auth/: microsoft.rs  mod.rs  model.rs  store.rs
src-tauri/src/minecraft/: client_update.rs  installer.rs  java.rs  java_progress.rs  launcher.rs  manifest.rs  mod.rs
src/components/: FullScreenInstaller.tsx  JavaProgressBar.tsx  LauncherEnhancements.tsx  Logo.tsx  Modal.tsx  PlayerSkin.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useJavaProgress.ts
src/lib/: backend.ts  commands.ts  designProfiles.ts  format.ts  friends.ts  shop.ts
src/pages/: Accounts.tsx  ClientPage.tsx  Friends.tsx  Home.tsx  Logs.tsx  Settings.tsx
src/store/: launcherStore.ts
(+2 files in other folders)
