[package]
name = "s9lab-launcher"
version = "1.0.2"
description = "Official S9Lab Minecraft Client Launcher"
authors = ["S9Lab"]
edition = "2021"
license = "All-Rights-Reserved"

[lib]
name = "s9lab_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
sha2 = "0.10"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
discord-rich-presence = "1.1.0"
base64 = "0.22"
tauri = { version = "=2.11.2", features = [] }
tauri-plugin-opener = "=2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "time", "fs", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
sha1 = "0.10"
hex = "0.4"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
futures-util = "0.3"
regex = "1"
opener = "0.7"




